# pyod_ae_uv_project

./: README.md  pyproject.toml
data/: mock_data.csv
src/pyod_ae_demo/: main.py
src/pyod_ae_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
